# ttk4155-byggern

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  WORKFLOW.md  guides.txt  install_toolchain.sh  run_test.sh
BLE SPI PROJECT/: README.md  ble_spi.c  ble_spi.h  main.c
BLE SPI PROJECT/pca10040/s132/arm4/: ble_app_template_pca10040_s132.uvproj
BLE SPI PROJECT/pca10040/s132/arm5_no_packs/: ble_app_template_pca10040_s132.uvprojx
BLE SPI PROJECT/pca10040/s132/armgcc/: ble_app_template_gcc_nrf52.ld
BLE SPI PROJECT/pca10040/s132/config/: sdk_config.h
BLE SPI PROJECT/pca10040/s132/iar/: ble_app_template_pca10040_s132.ewp
BLE SPI PROJECT/pca10040/s132/ses/: ble_app_template_pca10040_s132.emProject  ble_app_template_pca10040_s132.emSession  flash_placement.xml
lib/3dcube/: c3dcube.cpp  c3dcube.h
lib/CAN/: MCP2515.cpp  MCP2515.h  SPI.cpp  SPI.h  can.cpp  can.h
lib/Comm/: comm1.h
lib/adc/: adc.cpp  adc.h
lib/adc_internal/: adc_internal.cpp  adc_internal.h
lib/buffer/: buffer.cpp  buffer.h
lib/can/: can.cpp  can.h  canmsg.h  mcp2515.h
lib/comm/: comm.c  comm.h
lib/dac/: dac.cpp  dac.h
lib/display/: display.cpp  display.h  displayProgram  oled.cpp  oled.h  screen.cpp  screen.h  screenhandler.cpp  screenhandler.h
lib/encoder/: encoder.cpp  encoder.h
lib/example/: example.c  example.h
lib/fonts/: fonts.h
lib/fsm/: fsm.cpp  fsm.h
lib/i2c/: i2c.cpp  i2c.h  i2c_defines.h
lib/ir_detector/: ir_detector.cpp  ir_detector.h
lib/joystick/: joystick.cpp  joystick.h  joystick.hpp
lib/menu/: menu.cpp  menu.h  menuNode.cpp  menuNode.h
lib/motor/: motor.cpp  motor.h
lib/pid/: pid.cpp  pid.h
lib/pins/: pins.cpp  pins.h
lib/servo/: servo.cpp  servo.h
lib/slider/: slider.cpp  slider.h
lib/snake/: snake.cpp  snake.h  snake.h~
lib/solenoid/: solenoid.cpp  solenoid.h
lib/spi/: spi.cpp  spi.h
lib/stream/: stream.h
lib/tempDisplay/: screen.cpp  screen.h  temp.cpp  temp.h
lib/timer/: timer.c  timer.cpp  timer.h
lib/twi/: twi.c  twi.h
lib/uart/: uart.cpp  uart.h
lib/utilities/: bmath.h  eeprom.cpp  eeprom.h  pin.h  printf.cpp  printf.h  sound.h  utilities.h
node1/: CMakeLists.txt  address_space.txt
node1/include/: comm.h  main.h  utils.h
node1/src/: Test.c  Test.cpp  comm.c  extras_main.cpp  fsm_callback_functions.h  fsm_state_functions.cpp  fsm_state_functions.h  main.cpp  main_extras.cpp  menutemp.cpp
node1/test/: test.cpp  test.h
node2/: CMakeLists.txt  dev_list_1.txt
node2/include/: comm.h  utils.h
node2/src/: comm.c  game_functions.cpp  game_functions.h  init.cpp  main.cpp
node2/test/: test.cpp  test.h
node_1/: CMakeLists.txt  node_1.c  node_1.h
src/: CMakeLists.txt  example.c  example.h
src/uart/: uart.h
temp/: comm.h  run.sh  utils.h
test/display/: local_display_test.cpp  subdisplay.cpp  subdisplay.h
test/example/: CMakeLists.txt  test_example.c
test/suite_1/: CMakeLists.txt  suite_1.c
vhdl/: GAL.vhd
